--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Trezo - Angular 18 Bootstrap Admin Dashboard Template</title>
+        <title>CREMS</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
 
         <!-- Font Family -->
